fixed bin directory turned into exec file

--- a/install
+++ b/install
@@ -130,7 +130,7 @@ def get_latest_commit():
 
 
 def install():
-    dest_bins = os.path.join(HOME, ".local", "bin")
+    dest_bins = os.path.join(HOME, ".local", "bin") + "/"
     print(f"Copying binary files to {dest_bins}...")
     bins = os.path.join(os.getcwd(), "bin")
     if not os.path.isdir(bins):
